--- a/style.css
+++ b/style.css
@@ -1,45 +1,41 @@
 body {
-  background-color: #0a0a23;
+  background-color: darkblue;
 }
 
 #text {
-  background-color: #0a0a23;
-  color: #ffffff;
+  background-color: black;
+  color: white;
   padding: 10px;
 }
 
 #game {
   max-width: 500px;
   max-height: 400px;
-  background-color: #ffffff;
-  color: #ffffff;
-  margin: 30px auto 0px;
+  background-color: lightgray;
+  color: white;
+  margin: 0 auto;
   padding: 10px;
 }
 
-#controls,
-#stats {
-  border: 1px solid #0a0a23;
+#controls {
+  border: 1px black solid;
   padding: 5px;
-  color: #0a0a23;
+}
+
+#stats {
+  border: 1px black solid;
+  color: black;
+  padding: 5px;
 }
 
 #monsterStats {
   display: none;
-  border: 1px solid #0a0a23;
+  border: 1px black solid;
+  color: white;
   padding: 5px;
-  color: #ffffff;
-  background-color: #c70d0d;
+  background-color: red;
 }
 
 .stat {
   padding-right: 10px;
-}
-
-button {
-  cursor: pointer;
-  color: #0a0a23;
-  background-color: #feac32;
-  background-image: linear-gradient(#fecc4c, #ffac33);
-  border: 3px solid #feac32;
 }
